# ktx

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  ABOUT  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS  Makefile  Makefile.in  README  README.md  TODO  build_cmake.sh  configure  configure.in  ktx_builds.key.enc  ktx_mvs2019.vcxproj  makevm.bat  makevm.sh  meson.build  meson_options.txt  qwprogs_60.dsp  qwprogs_60.dsw  qwprogs_71.sln  qwprogs_71.vcproj  qwprogs_80.sln  qwprogs_80.vcproj  qwprogs_90.vcproj  qwprogs_vc2010.vcxproj  qwprogs_vc2015.sln  qwprogs_vc2015.vcxproj  qwprogs_vc2015.vcxproj.filters  qwprogs_vc2017.sln  qwprogs_vc2017.vcxproj  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: actions.yml  build-all-targets.yml  build-and-deploy-release.yml  build-and-deploy-snapshot.yml  build-targets-cmake.yml  build-targets.yml  main.yml
docs/: README.md
example-configs/: port2  portffa
example-configs/ktx/: pwd.cfg
example-configs/ktx/configs/usermodes/: slide2.cfg
example-configs/ktx/configs/usermodes/10on10/: default.cfg
example-configs/ktx/configs/usermodes/2on2/: dm6.cfg
include/: bg_lib.h  deathtype.h  fb_globals.h  g_consts.h  g_local.h  g_public.h  g_syscalls.h  mathlib.h  player.h  progdefs.h  progs.h  q_shared.h  rng.h  rng_gen_impl.h  rng_gen_state.h  rng_seed_impl.h  stats.h
ktx/: .cvsignore  README  configure  makevm.bat  qwprogs.dsp  qwprogs.dsw  qwprogs.ncb  qwprogs.opt  qwprogs.sln  qwprogs.vcproj  qwprogs_60.dsp  qwprogs_60.dsw  qwprogs_71.vcproj  qwprogs_80.vcproj
ktx/include/: bg_lib.h  g_consts.h  g_local.h  g_public.h  g_syscalls.h  mathlib.h  player.h  progdefs.h  progs.h  q_shared.h
ktx/src/: !changes.txt  !request  2do.txt  Makefile.dl.in  Makefile.vm.in  admin.c  arena.c  bg_lib.c  buttons.c  captain.c  client.c  combat.c  commands.c  ctf.c  doors.c  g_cmd.c  g_main.c  g_mem.c  g_spawn.c  g_syscalls.asm  g_syscalls.c  g_userinfo.c  g_utils.c  game.q3asm  globals.c  grapple.c  items.c  maps.c  match.c  mathlib.c  misc.c  motd.c  native_lib.c  plats.c  player.c  q_shared.c  runes.c  server.c  spectate.c  subs.c  (+5 more)
qcsrc/: fteextensions.qc  main.qc  progs.src  weaponpred.qc
resources/configs/: port3
resources/configs/ktx/: ktx.cfg  mvdsv.cfg  port2.cfg  port3.cfg  problem.cfg  pwd.cfg  vip_ip.cfg
resources/configs/ktx/configs/usermodes/: default.cfg  nacmidair.cfg  slide5.cfg  slide7.cfg
resources/configs/usermodes/: amphi.cfg  default.cfg  endif.cfg
resources/configs/usermodes/10on10/: default.cfg
resources/configs/usermodes/1on1/: default.cfg
resources/configs/usermodes/2on2/: a2.cfg  default.cfg
resources/configs/usermodes/3on3/: default.cfg
resources/configs/usermodes/4on4/: amphi.cfg  default.cfg
resources/configs/usermodes/ctf/: default.cfg
resources/configs/usermodes/ffa/: default.cfg
resources/example-configs/: port1  servers
resources/example-configs/id1/maps/: arena3.ent  arena5.ent  barrel.ent  bloodfest.ent  death6.ent  dm4ish.ent  e1m7.ent  fragyard.ent  genocide.ent  hohoho.ent  kenya.ent  pillar.ent  q1dm17.ent  rz1pondb.ent  slaug.ent
resources/example-configs/ktx/: ktx.cfg  matchless.cfg  mvdfinish.qws  mvdsv.cfg  port1.cfg  port2.cfg  port3.cfg  problem.cfg  pwd.cfg  server.cfg  vip_ip.cfg
resources/example-configs/ktx/configs/: reset.cfg
resources/example-configs/ktx/progs/: check.mdl  flag.mdl  star.mdl  w_coil.mdl  w_light.mdl  w_nail.mdl  w_rock.mdl  w_rock2.mdl  w_shot2.mdl
resources/extralog/: ktxlog_0.1.xsd
resources/maps/ctf/: dm1.ent  dm2.ent  dm3.ent  dm4.ent  dm5.ent  dm6.ent  e1m1.ent  e1m2.ent  e1m3.ent  e1m5.ent  e1m7.ent  e1m8.ent  e2m1.ent  e2m2.ent  e2m3.ent  e2m4.ent  e2m5.ent  e2m6.ent  e2m7.ent  e3m1.ent  e3m2.ent  e3m3.ent  e3m4.ent  e3m5.ent  e3m6.ent  e3m7.ent  e4m1.ent  e4m4.ent  e4m5.ent  e4m7.ent  e4m8.ent
resources/progs/: bit.mdl  finish.mdl  player_ax.mdl  player_gl.mdl  player_lg.mdl  player_ng.mdl  player_rl.mdl  player_sg.mdl  player_sn.mdl  player_ss.mdl  spawn.mdl  start.mdl  v_coil.mdl  vwplayer.mdl  w_axe.mdl  w_coil.mdl  w_nail2.mdl
src/: !changes.txt  Makefile.dl.in  Makefile.dl32.in  Makefile.vm.in  admin.c  antilag.c  arena.c  bg_lib.c  bot_aim.c  bot_blocked.c  bot_botenemy.c  bot_botenemy.c.rej  bot_botgoals.c  bot_bothazd.c  bot_bothelp.c  bot_botimp.c  bot_botjump.c  bot_botpath.c  bot_botphys.c  bot_botstat.c  bot_botthink.c  bot_botwater.c  bot_botweap.c  bot_client.c  bot_commands.c  bot_discharge.c  bot_items.c  bot_load.c  bot_loadmap.c  bot_match.c  bot_movement.c  bot_navmesh.c  bot_routing.c  bot_world.c  build.num  buttons.c  captain.c  clan_arena.c  client.c  coach.c  (+98 more)
tools/cross-cmake/: linux-amd64.cmake  linux-i686.cmake  windows-x86.cmake
tools/cross-compilation/: linux-aarch64.txt  linux-i686.txt
tools/lcc/: COPYRIGHT  LOG  README  makefile  makefile.nt
tools/lcc/doc/: 4.html  bprint.1  install.html  lcc.1
tools/lcc/lburg/: gram.y  lburg.1
tools/lcc/src/: .gitignore  Makefile  alpha.md  mips.md  rcc.asdl  sparc.md  x86.md  x86linux.md
tools/lcc/src/etc/: bytecode.c
tools/old-make-files/: Makefile.in
tools/old-make-files/src/: Makefile.dl.in
tools/old-msvc-projects/: ktx_mvs2019.sln
tools/old_mvs_files/: qwprogs_71.vcproj  qwprogs_90.sln  qwprogs_90.vcproj  qwprogs_vc2010.sln  qwprogs_vc2015.sln  qwprogs_vc2015.vcxproj  qwprogs_vc2015.vcxproj.filters  qwprogs_vc2017.vcxproj
tools/q3asm/: CMakeLists.txt  Makefile  cmdlib.c  cmdlib.h  mathlib.h  opstrings.h  q3asm.c  q3asm.dsp  q3asm.dsw  q3vm.c  qfiles.h  qvm.h  readme.md
tools/q3asm/src/: .gitignore  Makefile  q3asm.c
tools/q3lcc/: CMakeLists.txt  Makefile
tools/q3lcc/cpp/: cpp.c  cpp.h  getopt.c  include.c  macro.c  nlist.c  unix.c
tools/q3lcc/etc/: bytecode.c  lcc.c
tools/q3lcc/lburg/: gram.y
tools/q3lcc/lburg.dir/: gram.c
tools/q3lcc/src/: bytecode.c  c.h  dag.c  decl.c  expr.c  gen.c  init.c  input.c  lex.c  output.c  prof.c  profio.c  simp.c  stmt.c  string.c  sym.c  symbolic.c  trace.c  tree.c  types.c
tools/vs/: ktx.sln  ktx.vcxproj
(+188 files in other folders)
