dnl Process this file with autoconf to produce a configure script.
AC_INIT
#AC_CONFIG_HEADER(include/setup.h)
AC_PREFIX_DEFAULT(/usr/local)

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX
AC_CANONICAL_SYSTEM
AC_AIX
AC_PROG_MAKE_SET
AC_PATH_PROG(LCC,lcc)
AC_PATH_PROG(Q3ASM,q3asm)
AC_PATH_PROG(RM,rm)
AC_PATH_PROG(MKDEP,mkdep)
AC_PATH_PROG(MKDIR,mkdir)
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL

dnl Make the files.
AC_OUTPUT(Makefile src/Makefile.dl src/Makefile.vm)
