project('ktx', 'c',
	default_options : ['c_std=c99']
)

ktx_sources = [
	'src/admin.c',
	'src/arena.c',
#	'src/bg_lib.c',
	'src/bot_aim.c',
	'src/bot_blocked.c',
	'src/bot_botenemy.c',
	'src/bot_botgoals.c',
	'src/bot_bothazd.c',
	'src/bot_bothelp.c',
	'src/bot_botimp.c',
	'src/bot_botjump.c',
	'src/bot_botpath.c',
	'src/bot_botphys.c',
	'src/bot_botstat.c',
	'src/bot_botthink.c',
	'src/bot_botwater.c',
	'src/bot_botweap.c',
	'src/bot_client.c',
	'src/bot_commands.c',
	'src/bot_items.c',
	'src/bot_load.c',
	'src/bot_loadmap.c',
	'src/bot_match.c',
	'src/bot_movement.c',
	'src/bot_routing.c',
	'src/bot_world.c',
	'src/buttons.c',
	'src/captain.c',
	'src/coach.c',
	'src/clan_arena.c',
	'src/client.c',
	'src/combat.c',
	'src/commands.c',
	'src/ctf.c',
	'src/doors.c',
	'src/fb_globals.c',
	'src/files.c',
	'src/g_cmd.c',
	'src/globals.c',
	'src/g_main.c',
	'src/g_mem.c',
	'src/grapple.c',
	'src/g_spawn.c',
	'src/g_syscalls.c',
	'src/g_userinfo.c',
	'src/g_utils.c',
	'src/hoonymode.c',
	'src/items.c',
	'src/logs.c',
	'src/maps.c',
	'src/maps_map_amphi2.c',
	'src/maps_map_dm3.c',
	'src/maps_map_dm4.c',
	'src/maps_map_dm6.c',
	'src/maps_map_povdmm4.c',
	'src/marker_load.c',
	'src/marker_util.c',
	'src/match.c',
	'src/mathlib.c',
	'src/misc.c',
	'src/motd.c',
	'src/native_lib.c',
	'src/plats.c',
	'src/player.c',
	'src/q_shared.c',
	'src/race.c',
	'src/route_calc.c',
	'src/route_fields.c',
	'src/route_lookup.c',
	'src/runes.c',
	'src/server.c',
	'src/sp_ai.c',
	'src/sp_boss.c',
	'src/sp_client.c',
	'src/sp_demon.c',
	'src/sp_dog.c',
	'src/spectate.c',
	'src/sp_enforcer.c',
	'src/sp_fish.c',
	'src/sp_hknight.c',
	'src/sp_knight.c',
	'src/sp_monsters.c',
	'src/sp_ogre.c',
	'src/sp_oldone.c',
	'src/sp_shalrath.c',
	'src/sp_shambler.c',
	'src/sp_soldier.c',
	'src/sp_tarbaby.c',
	'src/sp_wizard.c',
	'src/sp_zombie.c',
	'src/stats.c',
	'src/stats_json.c',
	'src/stats_xml.c',
	'src/subs.c',
	'src/teamplay.c',
	'src/triggers.c',
	'src/vip.c',
	'src/vote.c',
	'src/weapons.c',
	'src/world.c',
]

c_args = []
if get_option('bot_support')
	c_args = '-DBOT_SUPPORT=1'
endif

library('qwprogs', ktx_sources,
	include_directories : include_directories('include'),
	c_args : c_args,
	dependencies : [
		meson.get_compiler('c').find_library('m', required : false)
	],
	name_prefix : ''
)
